--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -11,7 +11,7 @@
  * @updateUrl https://plusinsta.github.io/discord-plus/DiscordPlus.theme.css
  * @invite 2Jwh2nS
 */
-@import url(https://cdn.discordapp.com/attachments/1096805764506587197/1128312645599121478/image.png);
+@import url(https://cdn.discordapp.com/attachments/1096805764506587197/1128313859464253541/X9HYbNsDGb82SF8yYHph0Jg77a05K3vaRIPuMaxjnJM.jpg);
 
 /* I've commented most of these values so you can change them yourself. If you're having trouble, or you want to do more than what these values allow for, a volunteer might be able to help you in my server. */
 
